# yummy_slack

./: README.md  app.py  create_slack_app.md  pyproject.toml  resource_rc.py
app/controller/: main_window_controller.py  mesage_box_controller.py
app/model/: config_loader.py  decorators.py  static_globals.py
app/model/html_presets/: airium_message_gen.py
app/resources/: additional_stylesheets.py  resource.qrc
app/resources/ui_files/: main_window.ui
app/service/: chat_parser.py  logger.py
app/service/auth/: flask_server.py  test_ping.py
app/view/: html_templates.py  main_window_ui.py
